1st demo up to CONNECT

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "files.associations": {
         "err.h": "c",
         "socket.h": "c",
-        "client_mgr.h": "c"
+        "client_mgr.h": "c",
+        "resolv.h": "c"
     }
 }
