--- a/files/mission_control-cape-00A0.dts
+++ b/files/mission_control-cape-00A0.dts
@@ -49,5 +49,25 @@
             };
         };
     };
+        fragment@2 {
+                target = <&am33xx_pinmux>;
+                __overlay__ {
+                        bb_uart1_pins: pinmux_bb_uart1_pins {
+                                pinctrl-single,pins = <
+                                        0x184 0x20 /* P9.24 uart1_txd.uart1_txd MODE0 OUTPUT (TX) */
+                                        0x180 0x20 /* P9.26 uart1_rxd.uart1_rxd MODE0 INPUT (RX) */
+                                >;
+                        };
+                };
+        };
+
+	fragment@3 {
+                target = <&uart2>;	/* really uart1, most likely will not be used*/
+                __overlay__ {
+                        status = "okay";
+                        pinctrl-names = "default";
+                        pinctrl-0 = <&bb_uart1_pins>;
+                };
+        };
 };
 
